--- a/package.yaml
+++ b/package.yaml
@@ -50,6 +50,16 @@ executables:
     dependencies:
     - request-response
 
+  exercises:
+    main:                Exercises.hs
+    source-dirs:         exercises
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - request-response
+
 tests:
   request-response-test:
     main:                Spec.hs
