--- a/exercises/package.yaml
+++ b/exercises/package.yaml
@@ -1,13 +1,10 @@
-name:                zero-bs
+name:                zero-exercises
 version:             0.1.0.0
 github:              "alpacaaa/zero-haskell"
 license:             BSD3
 author:              "Marco Sampellegrini"
 maintainer:          "babbonatale@alpcaaa.net"
 copyright:           "2019 Marco Sampellegrini"
-
-extra-source-files:
-- ZERO-BS.md
 
 ghc-options:
   - -Wall
@@ -34,17 +31,13 @@ dependencies:
 - text
 - wai
 - wai-cors
-
-library:
-  source-dirs: src
+- zero-bs
 
 executables:
   exercises:
     main:                Main.hs
-    source-dirs:         exercises
+    source-dirs:         src
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    dependencies:
-    - zero-bs
