--- a/exercises/Makefile
+++ b/exercises/Makefile
@@ -3,7 +3,11 @@ run-tests:
 	cd test && ./run-tests
 
 bundle-frontend:
-	cd test && ./bundle-frontend && python -m SimpleHTTPServer 8800
+	cd test \
+	&& ./bundle-frontend \
+	&& cp logo-wide.png dist \
+	&& cd dist \
+	&& python -m SimpleHTTPServer 8800
 
 generate-docs:
 	# stack exec -- haddock --html --hyperlinked-source src/Zero/Server.hs --odir docs
