Exercise 05 - On/Off switch.

--- a/exercises/Makefile
+++ b/exercises/Makefile
@@ -10,12 +10,4 @@ bundle-frontend:
 	&& python -m SimpleHTTPServer 8800
 
 generate-docs:
-	# stack exec -- haddock --html --hyperlinked-source src/Zero/Server.hs --odir docs
-	# cabal new-build --enable-documentation --haddock-for-hackage
-	cabal new-haddock
-
-build-pedantic:
-	stack build --fast --pedantic
-
-sample:
-	JS=`cat ../src/Ex01StaticString/reference.js` gucci -f ../src/Ex01StaticString/data.yml template.html
+	stack haddock
