--- a/exercises/src/Ex01StaticString/data.yml
+++ b/exercises/src/Ex01StaticString/data.yml
@@ -3,5 +3,8 @@ title: Static String
 intro: |
   <p>
     Write a server that exposes a <code>/hello</code> route.<br>
-    <code>GET /hello</code> should return <code>hello</code>.
+    <pre>
+      GET /hello
+      >>> expected "hello"
+    </pre>
   </p>
