Link to README.

--- a/exercises/Makefile
+++ b/exercises/Makefile
@@ -2,11 +2,16 @@
 run-tests:
 	cd test && ./run-tests
 
-bundle-frontend:
+build-frontend:
 	cd test \
 	&& ./bundle-frontend \
 	&& cp logo-wide.png dist \
-	&& cd dist \
+	&& cp index.html dist
+
+bundle-frontend:
+	make build-frontend \
+	&& cd test/dist \
+	&& rm index.html \
 	&& python -m SimpleHTTPServer 8800
 
 generate-docs:
