Upload exercises + docs.

--- a/exercises/Makefile
+++ b/exercises/Makefile
@@ -8,11 +8,23 @@ build-frontend:
 	&& cp logo-wide.png dist \
 	&& cp index.html dist
 
-bundle-frontend:
+liveserver:
 	make build-frontend \
 	&& cd test/dist \
 	&& rm index.html \
 	&& python -m SimpleHTTPServer 8800
 
 generate-docs:
-	stack haddock
+	cd ../library \
+	&& stack haddock
+
+deploy:
+	make build-frontend \
+	&& make generate-docs \
+	&& cd ../library \
+	&& cp -R `stack path --local-doc-root`/zero-bullshit-0.1.0.0 ../exercises/test/dist/docs \
+	&& cd .. \
+	&& cp -R exercises/test/dist/ alpacaaa.github.io/zero-bullshit-haskell/ \
+	&& cd alpacaaa.github.io \
+	&& git add zero-bullshit-haskell \
+	&& git commit -m "Update website"
