--- a/exercises/src/Ex01StaticString/data.yml
+++ b/exercises/src/Ex01StaticString/data.yml
@@ -1,5 +1,6 @@
 exercise: "01"
 title: Static String
+solution: Ex01StaticString/StaticString.hs
 intro: |
   <p>
     Write a server that exposes a <code>/hello</code> route.<br>
