--- a/exercises/src/Ex02Echo/data.yml
+++ b/exercises/src/Ex02Echo/data.yml
@@ -1,5 +1,6 @@
 exercise: "02"
 title: Echo
+solution: Ex02Echo/Echo.hs
 intro: |
   <p>
     Write a server that exposes a <code>/echo</code> route.<br>
