--- a/exercises/src/Ex03CaseMatch/data.yml
+++ b/exercises/src/Ex03CaseMatch/data.yml
@@ -1,5 +1,6 @@
 exercise: "03"
 title: Case match
+solution: Ex03CaseMatch/CaseMatch.hs
 intro: |
   <p>
     Write a server that exposes a <code>/case</code> route.<br>
