Update install instructions.

--- a/exercises/package.yaml
+++ b/exercises/package.yaml
@@ -1,6 +1,6 @@
 name:                zero-exercises
 version:             0.1.0.0
-github:              "alpacaaa/zero-haskell"
+github:              "alpacaaa/zero-bullshit-haskell"
 license:             BSD3
 author:              "Marco Sampellegrini"
 maintainer:          "babbonatale@alpcaaa.net"
