--- a/exercises/src/Ex04StringManipulation/data.yml
+++ b/exercises/src/Ex04StringManipulation/data.yml
@@ -1,6 +1,7 @@
 exercise: "04"
 title: String manipulation
 solution: Ex04StringManipulation/StringManipulation.hs
+issue: 4
 intro: |
   <p>
     Write a server that exposes a <code>/string-manipulation</code> route.<br>
