--- a/exercises/src/Ex06Counter/data.yml
+++ b/exercises/src/Ex06Counter/data.yml
@@ -1,6 +1,7 @@
 exercise: "06"
 title: Counter
 solution: Ex06Counter/Counter.hs
+issue: 6
 intro: |
   <p>
     Write a server that exposes two routes:
