Add issue for Exercise 7.

--- a/exercises/src/Ex07ShoppingCart/data.yml
+++ b/exercises/src/Ex07ShoppingCart/data.yml
@@ -1,6 +1,7 @@
 exercise: "07"
 title: ShoppingCart
 solution: Ex07ShoppingCart/ShoppingCart.hs
+issue: 7
 intro: |
   <p>
     Write a server that manages a shopping cart.<br>
