--- a/exercises/src/Ex01StaticString/data.yml
+++ b/exercises/src/Ex01StaticString/data.yml
@@ -2,6 +2,7 @@ exercise: "01"
 title: Static String
 solution: Ex01StaticString/StaticString.hs
 issue: 1
+video: Agp0qP96780
 intro: |
   <p>
     Write a server that exposes a <code>/hello</code> route.<br>
