HTTP backend wip.

--- a/exercises/src/TodoMVC/js/package.json
+++ b/exercises/src/TodoMVC/js/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "prettier": "1.17.1"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
